2007-12-08  Ludovic Courtès  <ludo@gnu.org>

	* __scm.h (SCM_EXPECT, SCM_LIKELY, SCM_UNLIKELY): New macros.
	(SCM_ASSERT, SCM_ASSERT_TYPE, SCM_ASRTGO, SCM_GASSERT0,
	SCM_GASSERT1, SCM_GASSERT2, SCM_GASSERTn): Use them.
	* eval.c (ASSERT_SYNTAX, ASSERT_SYNTAX_2): Likewise.
	(CEVAL): Use branch prediction hints for syntax errors, wrong
	number of arguments and similar.	
	* numbers.c (scm_sum): Use `SCM_LIKELY' for the sum of two
	immediate numbers.
	(scm_difference, scm_product, scm_i_divide): Likewise.
	* validate.h (SCM_ASSERT_RANGE): Use `SCM_UNLIKELY'.

2007-12-04  Ludovic Courtès  <ludo@gnu.org>

	* ports.c (scm_c_read): Validate PORT as an open input port.
	(scm_c_write): Validate PORT as an open output port.

	* socket.c (scm_accept): Leave guile mode using
	`scm_std_select ()' before calling `accept(2)'.  Reported by
	dskr <dskr@mac.com>.

2007-10-19  Neil Jerram  <neil@ossau.uklinux.net>

	* eval.c (unmemoize_delay): Extend the environment before
	unmemoizing the promise thunk.  This fixes a segmentation fault
	reported by Frank Schwidom.

2007-10-17  Ludovic Courtès  <ludo@gnu.org>

	* read.c (CHAR_IS_BLANK_): Add `\r' (ASCII 0x0d).  This fixes a
	regression compared to 1.8.2.  Reported by Puneet
	<schemer@gmail.com>.

2007-10-10  Ludovic Courtès  <ludo@gnu.org>

	* pthread-threads.h (SCM_I_PTHREAD_MUTEX_INITIALIZER): Check
	`SCM_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER'.
	* gen-scmconfig.h.in
	(SCM_I_GSC_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER): New.
	* gen-scmconfig.c (main): Define
	`SCM_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER'.

2007-10-02  Ludovic Courtès  <ludo@gnu.org>

	* threads.c (on_thread_exit): Don't call `scm_leave_guile ()'
	since we're already in non-guile mode.  Reported by Greg Toxel
	for NetBSD.

2007-09-11  Kevin Ryde  <user42@zip.com.au>

	* posix.c (scm_putenv): Confine the putenv("NAME=") bit to mingw, use
	putenv("NAME") as the fallback everywhere else.  In particular this is
	needed for solaris 9.  Reported by Frank Storbeck.
	